--- a/app/templates/artworks.html
+++ b/app/templates/artworks.html
@@ -1,43 +1,52 @@
 {% extends "layout.html" %}
-{% block title %}NYC Parks Database — Artworks{% endblock %}
+{% block title %}NYC Parks Database – Artworks{% endblock %}
 {% block content %}
 
-	<div class="container-fluid">
-		<section id="section--head">
-			{% include "include/nav.html" %}
-			<div class="head [ row justify-content-center align-items-center ]">
-				<div class="col-sm-12 col-md-8">
-					<h1 class="text-center display-3"><b>ARTWORKS</b></h1>
-				</div>
+
+<div class="container-fluid">
+
+	<section id="section--head">
+		{% include "include/nav.html" %}
+		<div class="head [ row justify-content-center align-items-center ]">
+			<div class="[ col-md-8 ]">
+				<h1 class="[ text-center display-3 ]"><b>ARTWORKS</b></h1>
 			</div>
-		</section>
-		<section id="section--art">
-			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-8">
-					{% if artworks %}
-					{% for x in artworks %}
-						<h2><a href="{{ url_for('artwork', artwork_id=x.id) }}">{{ x.name }}</a></h2>
-						<ul>
-							<li>ID: {{ x.id }}</li>
-							<li>Artists:
-								<ul>
-									{% if x.artists %}
-									{% for artist in x.artists %}
-										<li><a href="{{ url_for('artist', artist_id=artist.id) }}">{{ artist.name }}</a></li>
-									{% endfor %}
-									{% else %}
-									<li><i>This artwork doesn't have any artists yet.</i></li>
-									{% endif %}
-								</ul>
-							</li>
-						</ul>
-					{% endfor %}
-					{% else %}
-					<p><i>There are no artworks in the database.</i></p>
-					{% endif %}
-				</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--artworks">
+		<div class="[ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				{% for artwork in artworks %}
+
+					<h2 class="[ pt-3 ]"><a href="{{ url_for('artwork', artwork_id=artwork.id) }}">{{ artwork.name }}</a></h2>
+					<ul class="[ p-0 ]">
+						<li>Artists:
+							<ul>
+
+								{% for artist in artwork.artists %}
+									<li><a href="{{ url_for('artist', artist_id=artist.id) }}">{{ artist.name }}</a></li>
+								{% else %}
+								<li><i>{{ artwork.name }} doesn't have any artists yet.</i></li>
+								{% endfor %}
+
+							</ul>
+						</li>
+					</ul>
+
+				{% else %}
+
+				<p><i>There are no artworks in the database yet.</i></p>
+
+				{% endfor %}
+
 			</div>
-		</section>
-	</div>
+		</div>
+	</section>
+
+</div>
 
 {% endblock %}
