Update row/column bootstrap classes

--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -1,35 +1,44 @@
 {% extends "layout.html" %}
-{% block title %}NYC Parks Database – Artists{% endblock %}
+{% block title %}NYC Parks Database – Exhibitions{% endblock %}
 {% block content %}
 
-	<div class="container-fluid">
-		<section id="section--head">
-			{% include "include/nav.html" %}
-			<div class="head [ row justify-content-center align-items-center ]">
-				<div class="col-sm-12 col-md-8">
-					<h1 class="text-center display-3"><b>EXHIBITIONS</b></h1>
-				</div>
+
+<div class="container-fluid">
+
+	<section id="section--head">
+		{% include "include/nav.html" %}
+		<div class="head [ row justify-content-center align-items-center ]">
+			<div class="[ col-md-8 ]">
+				<h1 class="[ text-center display-3 ]"><b>EXHIBITIONS</b></h1>
 			</div>
-		</section>
-		<section id="section--exhibitions">
-			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-8">
-					{% if exhibitions %}
-						{% for x in exhibitions %}
-							<h2 class="text-center display-4 p-4"><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h2>
-							<ul>
-								<li>ID: {{ x.id }}</li>
-								<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
-								<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
-								<li>De-Install Due Date: {{ x.deinstallDate }}</li>
-							</ul>
-						{% endfor %}
-					{% else %}
-						<p><i>There are no exhibitions in the database yet.</i></p>
-					{% endif %}
-				</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--exhibitions">
+		<div class="[ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				{% for exhibition in exhibitions %}
+
+					<h2 class="[ display-4 pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h2>
+					<ul class="[ p-0 ]">
+						<li>Exhibition Dates: {{ exhibition.start_date }} to {{ exhibition.end_date }}</li>
+						<li>Install Date(s): {{ exhibition.install_start }}{%if exhibition.install_end %} to {{ exhibition.install_end }}{% endif %}</li>
+						<li>De-Install Due Date: {{ exhibition.deinstallDate }}</li>
+					</ul>
+
+				{% else %}
+
+					<p><i>There are no exhibitions in the database yet.</i></p>
+
+				{% endfor %}
+
 			</div>
-		</section>
-	</div>
+		</div>
+	</section>
+
+</div>
 
 {% endblock %}
