Update artwork.exhibition > artwork.exhibitions

--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -116,7 +116,7 @@
 
 					<ul class="js-ul-child js-ul_exhibitions [ p-0 ]">
 
-						{% for exhibition in artwork.exhibition %}
+						{% for exhibition in artwork.exhibitions %}
 							<li class="artwork__li--artworks [ row mb-3 align-items-baseline ]">
 
 								<div class="[ col-md-3 ]">
